--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -72,8 +72,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
-        android:text="Button"
+        android:text="submit"
         app:layout_constraintStart_toEndOf="@+id/editTextText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/editTextText"/>
+
+    <TextView
+        android:id="@+id/textview_result"
+        android:layout_width="200dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="30dp"
+        android:text="Result:"
+        android:textSize="18dp"
+        app:layout_constraintEnd_toStartOf="@id/button_exec"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextText" />
+
+    <Button
+        android:id="@+id/button_exec"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="起動"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="@id/textview_result"
+        app:layout_constraintStart_toEndOf="@id/textview_result"
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
